test_files/negative/polymorph/polymorph.stats
Version : 1.5
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
PDF error : Lexing error : invalid escape sequence in name context in object 1 at offset 59 [0x3b] in file !
